# Plants_vs_Zombies_Lawnmower_Edition

./: .dockerignore  .gitignore  .rgignore  Basic Planning Document.md  README.md
c++/c++_Server_demo/: main.cpp
c++/protobuf_test/: CMakeLists.txt
c++/protobuf_test/proto/: messages.proto
c++/protobuf_test/src/: main.cpp
client/: build.gradle
client/assets-raw/Plants/PeaShooter/Pea/: Pea.pack
client/assets-raw/Plants/PeaShooter/Standby/: Standby.pack
client/assets-raw/Zombie/NormalZombie/Attack/: Attack.pack
client/core/assets/Plants/PeaShooter/Pea/: pea.atlas
client/core/assets/Plants/PeaShooter/Standby/: standby.atlas
client/core/assets/Zombie/NormalZombie/Attack/: attack.atlas
client/core/assets/def_in/: def_in.atlas
client/core/src/com/lawnmower/: Main.java
client/core/src/main/java/com/lawnmower/: Config.java  Main.java
client/core/src/main/java/com/lawnmower/enemies/: EnemyDefinitions.java  EnemyView.java
client/core/src/main/java/com/lawnmower/network/: TcpClient.java  UdpClient.java
client/core/src/main/java/com/lawnmower/players/: PlayerInputCommand.java  ServerPlayerSnapshot.java
client/core/src/main/java/com/lawnmower/screens/: GameOverScreen.java  GameRoomScreen.java  GameScreen.java  RoomListScreen.java
client/core/src/main/java/com/lawnmower/ui/: PlayerHudRenderer.java
client/core/src/main/java/com/lawnmower/utils/: ErrorPopupController.java
client/core/src/main/java/lawnmower/: Message.java
client/core/src/main/proto/: message.proto
client/desktop/src/main/java/com/lawnmower/desktop/: DesktopLauncher.java
docs/: Basic_Planning_Document.md  game_ex.md
docx/: 1  c++networkbeing.md  debian_server_setup.sh  planner.md  planner_0.1.md  seconddevice
docx/proto/: message.proto
game_config/: enemy_types.json  items_config.json  player_roles.json  server_config.json  upgrade_config.json
proto/: message.proto
script/: build_server.sh  check_server_env_windows.ps1  debian_server_setup.sh  format_server.sh  network_latency_check.sh  rsync_sync.sh
server/: CMakeLists.txt  Dockerfile
server/config/: enemy_types.json  player_roles.json  server_config.json
server/docs/: AI_GUIDE.md
server/docs/requirements/: game_scene_movement.md
server/include/config/: enemy_types_config.hpp  item_types_config.hpp  player_roles_config.hpp  server_config.hpp  upgrade_config.hpp
server/include/game/entities/: enemy_types.hpp
server/include/game/managers/: game_manager.hpp  room_manager.hpp
server/include/game/managers/internal/: game_manager_private_combat_types.inc  game_manager_private_members.inc  game_manager_private_methods.inc  game_manager_private_tick_types.inc  game_manager_private_types.inc
server/include/network/tcp/: tcp_server.hpp  tcp_session.hpp  tcp_session_internal.hpp
server/include/network/udp/: udp_server.hpp
server/proto/: message.proto
server/src/: main.cpp
server/src/config/: enemy_types_config.cpp  item_types_config.cpp  player_roles_config.cpp  server_config.cpp  upgrade_config.cpp
server/src/game/managers/: game_manager.cpp  game_manager_combat.cpp  game_manager_combat_drop.cpp  game_manager_combat_gameover.cpp  game_manager_combat_melee.cpp  game_manager_combat_projectile.cpp  game_manager_enemy.cpp  game_manager_event_dispatch.cpp  game_manager_internal_utils.cpp  game_manager_loop.cpp  game_manager_metrics.cpp  game_manager_misc_utils.cpp  game_manager_runtime.cpp  game_manager_scene.cpp  game_manager_session.cpp  game_manager_sync.cpp  game_manager_sync_dispatch.cpp  game_manager_tick_dispatch.cpp  game_manager_tick_flow.cpp  game_manager_upgrade.cpp  room_manager.cpp  room_manager_gameplay.cpp  room_manager_lifecycle.cpp  room_manager_session.cpp
server/src/game/managers/internal/: game_manager_event_dispatch.hpp  game_manager_internal_utils.hpp  game_manager_misc_utils.hpp  game_manager_sync_dispatch.hpp
server/src/network/tcp/: session_auth.cpp  session_gameplay.cpp  session_room.cpp  tcp_server.cpp  tcp_session.cpp
server/src/network/udp/: udp_server.cpp
server/tests/: config_loader_smoke_test.cpp  udp_sync_smoke_test.cpp
server/tests/integration/: server_smoke_test.cpp
server_metrics/2026-02-06/: room_2_run_1770350090533.json
